# NotificationService

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
config/: toml_config_manager.py
config/test/: .env  Dockerfile.test  config.toml  docker-compose.test.yaml  export.toml
src/app/: config.py  run.py
src/app/application/commands/: base_interactor.py  game_digest.py
src/app/application/common/: response_status_enum.py
src/app/application/common/exceptions/: email.py  event.py
src/app/application/common/ports/: email_sender.py  event_publisher.py  event_subscriber.py  transaction_manager.py  unit_of_work.py
src/app/application/events/: event_dispatcher.py
src/app/domain/entities/base/: value_object.py
src/app/domain/entities/pub_sub/: entity.py  value_objects.py
src/app/infrastructure/adapters/database/: sqlalc_unit_of_work.py
src/app/infrastructure/adapters/database/repositories/: event_repository.py
src/app/infrastructure/adapters/email/: smtp_email_sender.py
src/app/infrastructure/adapters/pub_sub/: pub_sub_event_consumer.py  pub_sub_event_producer.py
src/app/infrastructure/sqla_persistence/: orm_registry.py
src/app/infrastructure/sqla_persistence/alembic/: env.py
src/app/infrastructure/sqla_persistence/alembic/versions/: 2025_10_10_1552-16c842b1765a_event_table.py
src/app/infrastructure/sqla_persistence/mappings/: all.py  event.py
src/app/presentation/common/: asgi_auth_middleware.py  exception_handler.py
src/app/presentation/common/http_api_routers/: api_v1.py
src/app/presentation/common/infrastructure_adapters/auth_context/: cookie_access_token_request_handler.py
src/app/setup/: app_factory.py
src/app/setup/config/: constants.py  logs.py  settings.py
src/app/setup/ioc/: registry.py
src/app/setup/ioc/di_providers/: application.py  infrastructure.py  settings.py
src/notification_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_consumer.py  test_game_digest_interactor.py  test_idempotency.py
